Updated functions for add,delete

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar">
-    <h2>🐱 Cat Tasks</h2>
+    <h2>Cat Tasks</h2>
   </nav>
 
   <!-- Welcome
@@ -26,13 +26,13 @@
   <!-- Boards -->
   <section class="boards">
     <div class="board" id="pending">
-      <h3>🐱 To Be Done</h3>
-      <div class="task-list"></div>
+      <h3> To Be Done</h3>
+      <div class="task-list" id="pending-list"></div>
     </div>
 
     <div class="board" id="completed">
-      <h3>😴 Done & Napping</h3>
-      <div class="task-list"></div>
+      <h3>Done & Napping</h3>
+      <div class="task-list" id="completed-list"></div>
     </div>
   </section>
 
